--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-*{
+/* *{
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
 }
 body{
     background-color: aqua;
-}
+} */
